<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/ibm_logo"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:contentDescription="@string/ibmlogo"
        android:src="@drawable/ibmlogo" />

    <!-- Username EditText -->
    <EditText
        android:id="@+id/editTextUsernameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/username"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A" />

    <!-- University Email EditText -->
    <EditText
        android:id="@+id/editTextUniversityEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/university_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#546E7A" />

    <!-- Academic Subject EditText -->
    <EditText
        android:id="@+id/editTextAcademicsubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/academic_subject"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A" />

    <!-- Password EditText -->
    <EditText
        android:id="@+id/editTextPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#546E7A" />



    <!-- Confirm Password EditText -->
    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#546E7A" />

    <!-- Register Button -->
    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textColor="@color/white"
        android:backgroundTint="#0068A8" />

    <TextView
        android:id="@+id/AlreadyRegistered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_registered"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/buttonBackToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_login"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textColor="@color/white"
        android:backgroundTint="#0068A8" />
</LinearLayout>
