<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".UploadCoursesForm">


    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:letterSpacing="0.05"
        android:lineSpacingExtra="4dp"
        android:shadowColor="#CCCCCC"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="@string/upload_course_title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#0078D4"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="176dp" />

    <TextView
        android:id="@+id/Form_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Form_explain"
        android:textSize="25sp"
        android:padding="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/editTextCourseName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:autofillHints=""
        android:hint="@string/Form_coursename"
        android:inputType="text"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/editTextCourseLink"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:autofillHints=""
        android:hint="@string/Form_courselink"
        android:inputType="text"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/editTextCourseDescription"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:autofillHints=""
        android:hint="@string/Form_coursedescription"
        android:inputType="textMultiLine"
        android:textColorHint="#546E7A" />

    <TextView
        android:id="@+id/textViewCharacterCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="8dp"
        android:textColor="#000000" />

    <Button
        android:id="@+id/buttonUploadCourses"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#0068A8"
        android:text="@string/Uploadcourse"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonBacktoIntro"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#0068A8"
        android:text="@string/BacktoIntro"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />



</LinearLayout>

